# DataSources

./: Location.py  README.md  Weather.py  pyproject.toml  setup.py
OutsideWorld/Finance/: Screener.py  Stock.py
OutsideWorld/Investing/: Reference.py  Screener.py  Stock.py
OutsideWorld/Location/: Weather.py
src/DataSources/Location/: Geocoding.py
src/ExternalAPIs/Location/: Weather.py  __init__.py
src/ExternalAPIs/Misc/: Email.py
src/OutsideWorld/Finance/: Stock.py
