[project]
name = "OutsideWorld"
version = "0.0.1"
authors = [
  { name="Faysal Khatri", email="faysalkhatri@gmail.com" },
]
description = "A package of various public APIs I use for my own projects."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fkhatri1/OutsideWorld"

[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"